Se agregan utilidades de sass

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <img  class="menupic__art--img" src="./Assets/pajaro.png" alt="">
                     <p class="menupic__text">
                         
-                       <span> Nos aseguramos que la calidad en los procesos de producción sea el ingrediente #1 de nuestros alimentos.</span>
+                       <span> Nos aseguramos que la calidad en los procesos de producción sea el ingrediente #1 de nuestros alimentos, para llevarte a casa el mejor alimento.</span>
 
                       <button class="menupic__button">Leer mas</button>
                         
