Se agrega responsive

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="En esta pagina se encontrara informacion acerca de la marca supremacy, se pueden realizar compras, y captar informacion sobre las mascotas">
+    <meta name="keywords" content="GATOS SUPREMACY BALANCEADO MASCOTAS ANIMALES PERROS ">
     <title>Supremacy</title>
    <link rel="stylesheet" href="./css/main.css">
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -13,6 +15,8 @@
         <img class="header__logo" src="/Assets/LOGO-02-02.png" alt="Logo de balanceado">
         <div></div>
         <nav class="header__nav">
+             <input type="checkbox" class="hamburguer1" id="menu">
+             <label for="menu" class="hamburguer"> ☰ </label>
             <ul class="list">
                 <li class="list__item"><a  class="list__item--line" href="#">Inicio</a></li>
                 <li class="list__item"><a class="list__item--line" href="./Secciones/perros.htm">Perros</a></li>
