--- a/Secciones/gatos.html
+++ b/Secciones/gatos.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=S, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="En esta pagina se encontrara informacion acerca de gatos redactada por la marca supremacy">
+    <meta name="keywords" content="GATOS SUPREMACY BALANCEADO MASCOTAS ANIMALES">
+    <title>Supremacy Gatos</title>
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -12,6 +14,8 @@
     <header class="header">
         <img class="header__logo" src="../Assets/LOGO-02-02.png" alt="Logo de balanceado">
         <nav class="header__nav">
+            <input type="checkbox" class="hamburguer1" id="menu">
+             <label for="menu" class="hamburguer"> ☰ </label>
             <ul class="list">
                 <li class="list__item"><a  class="list__item--line" href="../index.html">Inicio</a></li>
                 <li class="list__item"><a class="list__item--line" href="../Secciones/perros.htm">Perros</a></li>
