--- a/Secciones/perros.htm
+++ b/Secciones/perros.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+w<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,6 +12,9 @@
     <header class="header">
         <img class="header__logo" src="../Assets/LOGO-02-02.png" alt="Logo de balanceado">
         <nav class="header__nav">
+
+            <input type="checkbox" class="hamburguer1" id="menu">
+             <label for="menu" class="hamburguer"> ☰ </label>
             <ul class="list">
                 <li class="list__item"><a  class="list__item--line" href="../index.html">Inicio</a></li>
                 <li class="list__item"><a class="list__item--line" href="../Secciones/perros.htm">Perros</a></li>
