Se agrega nuestros productos y ventana de contacto

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+
+    
     <header class="header">
         <img class="header__logo" src="/Assets/LOGO-02-02.png" alt="Logo de balanceado">
         <div></div>
@@ -19,7 +21,7 @@
              <label for="menu" class="hamburguer"> ☰ </label>
             <ul class="list">
                 <li class="list__item"><a  class="list__item--line" href="#">Inicio</a></li>
-                <li class="list__item"><a class="list__item--line" href="./Secciones/perros.htm">Perros</a></li>
+                <li class="list__item"><a class="list__item--line" href="./Secciones/perros.html">Perros</a></li>
                 <li class="list__item"><a class="list__item--line" href="./Secciones/gatos.html">Gatos</a></li>
                 <li class="list__item"><a class="list__item--line" href="./Secciones/nuestrospuntos.html">Nuestros productos</a></li>
                 <li class="list__item"><a  class="list__item--line"href="Secciones/contacto.html">Contacto</a></li>
