--- a/Secciones/gatos.html
+++ b/Secciones/gatos.html
@@ -18,7 +18,7 @@
              <label for="menu" class="hamburguer"> ☰ </label>
             <ul class="list">
                 <li class="list__item"><a  class="list__item--line" href="../index.html">Inicio</a></li>
-                <li class="list__item"><a class="list__item--line" href="../Secciones/perros.htm">Perros</a></li>
+                <li class="list__item"><a class="list__item--line" href="../Secciones/perros.html">Perros</a></li>
                 <li class="list__item"><a class="list__item--line" href="../Secciones/gatos.html">Gatos</a></li>
                 <li class="list__item"><a class="list__item--line" href="../Secciones/nuestrospuntos.html">Nuestros productos</a></li>
                 <li class="list__item"><a  class="list__item--line"href="..//Secciones/contacto.html">Contacto</a></li>
