--- a/Secciones/nuestrospuntos.html
+++ b/Secciones/nuestrospuntos.html
@@ -34,7 +34,8 @@
         </section>
 
         <section> 
-            <div class="menutext">
+            <div class="menutextpr">
+                
                 
             <h3>Conoce nuestros productos</h3>
             <p class="menutext--text">Supremacy cuenta con una gama de alimentos para mascotas formulados especialmente para cubrir sus necesidades.
