--- a/Secciones/perros.html
+++ b/Secciones/perros.html
@@ -34,7 +34,7 @@
         </section>
 
         <section> 
-            <div class="menutext">
+            <div class="menutextp">
                 
             <h3>Aprende cómo cuidar a tu perro</h3>
             <p class="menutext--text">Consulta los artículos que Supremacy preparó para que sepas cuidar a tu perro en cada una de sus etapas de vida.</p>
