--- a/Secciones/contacto.html
+++ b/Secciones/contacto.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="En esta pagina se encontrara informacion acerca de las formas de contacto de supremacy">
+    <meta name="keywords" content=" GATOS CONTACTO DIRECCION SUPREMACY BALANCEADO MASCOTAS ANIMALES PERROS ">
+    <title>Supremacy Contacto </title>
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
