--- a/Secciones/nuestrospuntos.html
+++ b/Secciones/nuestrospuntos.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="En esta pagina se podra comprar balanceado y comida marca supremacy y tambien ver los mismos">
+    <meta name="keywords" content=" GATOS COMPRAS SUPREMACY BALANCEADO MASCOTAS ANIMALES PERROS ">
+    <title>Supremacy productos </title>
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
